--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Itzmine App</title>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+   
     <div id="root"></div>
+  
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -39,5 +42,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <mainname>ItzMine</mainname>
+    <mainfav>Favorite</mainfav>
+    <mainarch>Archive</mainarch>
+    <maincover></maincover>
+    <mainline></mainline>
   </body>
 </html>
